--- a/css/styles.css
+++ b/css/styles.css
@@ -192,13 +192,120 @@ body {
     font-family: var(--font-primary);
     font-size: var(--display-medium);
     font-weight: var(--weight-regular);
-    line-height: 64px;
-    letter-spacing: -0.25px;
+    line-height: 52px;
+}
+.display-small{
+  font-family: var(--font-primary);
+  font-size: var(--display-small);
+  font-weight: var(--weight-regular);
+  line-height: 44px;
+}
+.headline-large{
+  font-family: var(--font-primary);
+  font-size: var(--headline-large);
+  font-weight: var(--weight-regular);
+  line-height: 40px;
+}
+
+.headline-medium{
+  font-family: var(--font-primary);
+  font-size: var(--headline-medium);
+  font-weight: var(--weight-regular);
+  line-height: 36px;
+}
+.headline-small{
+  font-family: var(--font-primary);
+  font-size: var(--headline-small);
+  font-weight: var(--weight-regular);
+  line-height: 32px;
+}
+.title-large{
+  font-family: var(--font-primary);
+  font-size: var(--title-large);
+  font-weight: var(--weight-regular);
+  line-height: 28px;
+}
+.title-medium{
+  font-family: var(--font-primary);
+  font-size: var(--title-medium);
+  font-weight: var(--weight-medium);
+  line-height: 24px;
+  letter-spacing: 0.15px;
+}
+.title-small{
+  font-family: var(--font-primary);
+  font-size: var(--title-small);
+  font-weight: var(--weight-medium);
+  line-height: 20px;
+  letter-spacing: 0.1px;
+}
+.body-large{
+  font-size: var(--body-large);
+  font-weight: var(--weight-regular);
+  line-height: 24px;
+  letter-spacing: 0.5px;
+}
+.body-medium{
+  font-size: var(--body-medium);
+  font-weight: var(--weight-regular);
+  line-height: 20px;
+  letter-spacing: 0.25px;
+}
+.body-small{
+  font-size: var(--body-small);
+  font-weight: var(--weight-regular);
+  line-height: 16px;
+  letter-spacing: 0.4px;
+}
+.label-large{
+  font-size: var(--label-large);
+  font-weight: var(--weight-medium);
+  line-height: 20px;
+  letter-spacing: 0.1px;
+}
+.label-medium{
+  font-size: var(--label-medium);
+  font-weight: var(--weight-medium);
+  line-height: 16px;
+  letter-spacing: 0.5px;
+}
+.label-small{
+  font-size: var(--label-small);
+  font-weight: var(--weight-medium);
+  line-height: 16px;
+  letter-spacing: 0.5px;
 }
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
 
+.material-symbols-outlined{
+  width: 1em;
+  height: 1em;
+  display: block;
+  font-variation-settings: 
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+}
+:has(> .state-layer){
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+}
+.state-layer {
+  position: absolute;
+  inset: 0;
+  background-color: var(--state-layer-bg);
+  transition: var(--motion-duration-short-1) var(--motion-easing-linear);
+  opacity: 0;
+}
+:has(> .state-layer):hover .state-layer {opacity: 0.08;}
+
+:has(> .state-layer):is(:focus, :focus-visible, :active) .state-layer{
+  opacity: 0.12;
+}
 /*-----------------------------------*\
   #COMPONENT
 \*-----------------------------------*/
@@ -206,6 +313,12 @@ body {
 /**
  * BUTTON
  */
+ .icon-btn{
+  width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+ }
 
 /**
  * TAB
@@ -226,6 +339,34 @@ body {
 /*-----------------------------------*\
   #TOP BAR
 \*-----------------------------------*/
+.topbar{
+  background-color: var(--background);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: var(--top-bar-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 16px ;
+  z-index: 4;
+}
+[data-theme="dark"] .logo .light,
+[data-theme="light"] .logo .dark {display: none;}
+
+[data-theme="dark"] .logo .dark,
+[data-theme="light"] .logo .light {display: none;}
+
+.theme-btn {
+  color: var(--on-surface-variant);
+  --state-layer-bg :var(--on-surface-variant);
+  border-radius: var(--radius-full);
+  overflow: hidden;
+}
+  
+[data-theme="dark"] .theme-btn .dark,
+[data-theme="light"] .theme-btn .light {display: none;}
 
 /*-----------------------------------*\
   #HERO
